@@ -32,6 +32,8 @@ Bug Fixes
 +++++++++
 
 * Fix issue when adding multiple portal profile filters causing the wrong type to be picked
+* Added a delay to the port bounce on the EdgeCore switches so that the redirection page
+  has time to load before the port is shut. 
 
 
 Version 4.3.0 released on 2014-06-26
